*Add click listeners and actions fo menu activity. *fix flow login and sign up and logout. *implement flow validate code. *implement news fragment and adapter and layout. *implement products fragment and adapter and layout. *implement pets fragment and adapter and layout. *implement profile fragment and adapter and layout. *Adding functions for api calls in global functions. *Adding vars in global vars. *Adding shapes for drawable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="message_error_connection">Please check your internet connection and try again later</string>
     <string name="your_session_expired">Your current session has expired, please login again.</string>
     <string name="message_error_occured">An error has occurred, try again later</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
